# nexus

./: .van-onboard.sh  README.md  reputation_core_v2_backup.wasm
contracts/nexus-sails/: .binpath  Cargo.toml
contracts/nexus-sails/src/: lib.rs
contracts/raw-nexus/: nexus.wasm  nexus.wat
contracts/reputation-core/: Cargo.toml
contracts/reputation-core-v2/: Cargo.toml  Makefile
contracts/reputation-core-v2/src/: lib.rs  wasm.rs
contracts/reputation-core/src/: lib.rs
contracts/stake-module/: Cargo.toml
contracts/trust-badge/: Cargo.toml
docs/: nexus.idl
docs/hackathon/: nexus_agent.idl  skills.md
frontend/: blast.mjs  gen-wallets.mjs  package-lock.json  package.json  seed.mjs
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/agent/[id]/: page.tsx
frontend/app/agents/: page.tsx
frontend/app/api/agents/: route.ts
frontend/app/api/agents/[id]/: route.ts
frontend/app/api/agents/[id]/stake/: route.ts
frontend/app/api/reviews/: route.ts
frontend/app/api/stats/: route.ts
frontend/app/leaderboard/: page.tsx
frontend/app/register/: page.tsx
frontend/app/stake/: page.tsx
frontend/components/: Navbar.tsx
frontend/data/: db.json
frontend/lib/: WalletContext.tsx  contract.ts  redis.ts  stars.ts
scripts/: build-deploy-reputation-v2.sh  gen-wallets.mjs  van-complete.sh  van-env.sh  van-hackathon-continue.sh  van-hackathon-full.sh  van-register-participant.sh  wallets.json
