[package]
name = "reputation-core-v2"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear", tag = "v1.6.1" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear", tag = "v1.6.1" }

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
